--- a/css/styles.css
+++ b/css/styles.css
@@ -119,7 +119,7 @@ header > div {
 }
 .list > a {
   color: var(--h2-text-color);
-    transition-property: color;
+  transition-property: color;
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -145,7 +145,6 @@ header > div {
   transition-property: color fill;
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
- 
 }
 .list-contacts > a:hover,
 .list-contacts > a:focus {
@@ -156,8 +155,8 @@ header > div {
   position: relative;
 }
 
-.list div::after{
-  content: '';
+.list div::after {
+  content: "";
   position: absolute;
 
   width: 100%;
@@ -166,7 +165,6 @@ header > div {
   bottom: -32px;
   left: 0px;
   background-color: var(--Logo-blue-color);
-
 }
 /* nav-block стилі для блоку посилань хедера*/
 .nav-block {
@@ -244,7 +242,7 @@ header > div {
   padding-top: 94px;
 }
 
-.advantage h3{
+.advantage h3 {
   margin-top: 30px;
   margin-bottom: 10px;
   color: var(--h2-text-color);
@@ -253,7 +251,7 @@ header > div {
   font-size: 14px;
   line-height: 16px;
   letter-spacing: 0.03em;
-  text-transform:uppercase;
+  text-transform: uppercase;
 }
 .advantage p {
   max-width: 270px;
@@ -297,11 +295,11 @@ header > div {
   margin-top: 50px;
   margin-bottom: 0px;
 }
-.wedo-li{
+.wedo-li {
   position: relative;
   max-height: 294px;
 }
-.wedo-box{
+.wedo-box {
   position: absolute;
 
   width: 100%;
@@ -403,7 +401,7 @@ footer {
   padding-bottom: 60px;
   background-color: var(--footer-header-background);
 }
-.footer-ul{
+.footer-ul {
   display: flex;
   flex-direction: row;
 }
@@ -415,7 +413,7 @@ address {
   line-height: 24px;
   letter-spacing: 0.03em;
 }
-.footer-col{
+.footer-col {
   margin-right: 70px;
 }
 .down-page {
@@ -542,7 +540,8 @@ p.img-p {
 }
 .portfolio-projects > li:hover,
 .portfolio-projects > li:focus {
-  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
+    1px 4px 6px rgba(0, 0, 0, 0.16);
 }
 .portfolio-projects > li:not(:nth-last-child(-n + 3)) {
   margin-bottom: 30px;
@@ -638,7 +637,7 @@ p.img-p {
   margin-top: 50px;
 }
 .client-ul li:not(:last-child) {
-  margin-right: 30px;.
+  margin-right: 30px;
   margin-bottom: 0px;
 }
 .social-li-down a {
@@ -651,13 +650,11 @@ p.img-p {
   padding: 12px 12px 12px 12px;
   border-radius: 50%;
   border-color: var(--footer-header-background);
-  background-color: rgba(255, 255, 255, 0.1) ;
+  background-color: rgba(255, 255, 255, 0.1);
 
   transition-property: fill border-color background-color;
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-
-  
 }
 .social-li-down a:hover,
 .social-li-down a:focus {
@@ -665,66 +662,66 @@ p.img-p {
   border-color: var(--Logo-blue-color);
   background-color: var(--Logo-blue-color);
 }
-.social-ul-down li:not(:last-child){
+.social-ul-down li:not(:last-child) {
   margin-right: 10px;
 }
 .social-ul-down {
   display: flex;
   flex-direction: row;
 }
-.add{
-margin-top: 8px;
-margin-bottom: 20px;
-font-style: normal;
-font-weight: bold;
-font-size: 14px;
-line-height: 16px;
-letter-spacing: 0.03em;
-text-transform: uppercase;
-color: var(--Logo-white-color);
+.add {
+  margin-top: 8px;
+  margin-bottom: 20px;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 14px;
+  line-height: 16px;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  color: var(--Logo-white-color);
 }
-.pr-div{
+.pr-div {
   width: 100%;
-  heighth:100%;
-  }
-/* Портфолио переход для проекта*/
-.project-im{
-position: relative;
-overflow: hidden;
+  height: 100%;
 }
-.project-text{
-position: absolute;
-opacity: 1;
-/*0*/
-width: 100%;
-height: 100%;
-padding:63px 24px 63px 24px;
-bottom: -4px;
-left: 0px;
-background-color: rgba(33, 150, 243, 0.9);;
-font-family: Roboto;
-font-style: normal;
-font-weight: normal;
-font-size: 18px;
-line-height: 1.56;
-/* or 156% */
-letter-spacing: 0.03em;
-color: var(--Logo-white-color);
-overflow: hidden;
-transform: translateY(316px);
-transition-property: transform;
-transition-duration: 250ms;
-transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+/* Портфолио переход для проекта*/
+.project-im {
+  position: relative;
+  overflow: hidden;
+}
+.project-text {
+  position: absolute;
+  opacity: 1;
+  /*0*/
+  width: 100%;
+  height: 100%;
+  padding: 63px 24px 63px 24px;
+  bottom: -4px;
+  left: 0px;
+  background-color: rgba(33, 150, 243, 0.9);
+  font-family: Roboto;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 18px;
+  line-height: 1.56;
+  /* or 156% */
+  letter-spacing: 0.03em;
+  color: var(--Logo-white-color);
+  overflow: hidden;
+  transform: translateY(316px);
+  transition-property: transform;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .project-li:hover .project-text,
-.project-li:focus .project-text{
-transform: translateY(15px);
+.project-li:focus .project-text {
+  transform: translateY(15px);
 }
-section > div > ul::backdrop{
+section > div > ul::backdrop {
   background-color: var(--p-text-color);
 }
-.is-hidden{
+.is-hidden {
   display: none;
 }
 
